--- a/app/styles/constants.scss
+++ b/app/styles/constants.scss
@@ -2,5 +2,6 @@
 
 $heading-color: #293C4E;
 $button-color: #3498DB;
-$primary-font-family: "Merriweather", serif;;
-$secondary-font-family: "Merriweather Sans", sans-serif;
+$upload-avatar-button-color: #627B8B;
+$merriweather: "Merriweather", serif;;
+$merriweather-sans: "Merriweather Sans", sans-serif;
