--- a/app/styles/input-section.scss
+++ b/app/styles/input-section.scss
@@ -6,6 +6,8 @@
         font-size: 10px;
         font-weight: bold;
         border-bottom: 1px solid lightgray;
+        opacity: 0.5;
+        margin: 0 10px;
     }
 
     @media (min-width: 450px) {
