--- a/app/styles/hcard-preview.scss
+++ b/app/styles/hcard-preview.scss
@@ -2,7 +2,7 @@
 
 .hcard-preview {
     min-width: 270px;
-    max-width: 400px;
+    max-width: 350px;
     padding: 30px 10px;
     margin: auto;
 
@@ -12,10 +12,11 @@
         height: 80px;
 
         .full-name {
-            font-size: 24px;
+            font-family: $merriweather;
+            font-size: 22px;
             color: white;
             position: absolute;
-            bottom: 16px;
+            bottom: 14px;
             left: 16px;
         }
 
@@ -33,7 +34,7 @@
 
     .preview-body {
         background-color: white;
-        padding: 10px;
+        padding: 12px 10px 18px;
 
         .preview-body-row {
             display: flex;
@@ -47,16 +48,19 @@
             display: flex;
             align-items: baseline;
             border-bottom: 1px solid lightgray;
-            padding-top: 5px;
+            padding-top: 7px;
 
             .preview-field-label {
                 width: 75px;
                 text-transform: uppercase;
-                font-size: 12px;
+                font-size: 9px;
+                font-weight: bold;
+                color: $heading-color;
             }
 
             .preview-field-value {
-
+                font-family: $merriweather;
+                font-size: 12px;
             }
         }
     }
