--- a/app/styles/input-field.scss
+++ b/app/styles/input-field.scss
@@ -1,9 +1,14 @@
+@import "constants";
+
 .input-field {
     padding-top: 10px;
 
     .input-field-label {
         text-transform: uppercase;
         font-size: 12px;
+        font-weight: bold;
+        margin-bottom: 2px;
+        color: $heading-color;
     }
 
     .input-field-value {
@@ -13,6 +18,7 @@
         border: 1px solid lightgray;
         outline: none;
         padding: 5px;
+        font-family: $merriweather;
 
         &:focus {
             border-color: blue;
