--- a/app/styles/upload-avatar-button.scss
+++ b/app/styles/upload-avatar-button.scss
@@ -10,5 +10,6 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        background-color: $upload-avatar-button-color;
     }
 }
