--- a/app/styles/constants.scss
+++ b/app/styles/constants.scss
@@ -5,3 +5,5 @@ $button-color: #3498DB;
 $upload-avatar-button-color: #627B8B;
 $merriweather: "Merriweather", serif;;
 $merriweather-sans: "Merriweather Sans", sans-serif;
+$medium-screen-width-start: 450px;
+$medium-screen-width-end: 800px;
