--- a/app/styles/hcard-builder.scss
+++ b/app/styles/hcard-builder.scss
@@ -1,24 +1,34 @@
 @import "constants";
 
 .hcard-builder {
+    max-width: 1000px;
+    margin: auto;
 
     .hcard-builder-title {
         font-family: $merriweather-sans;
         font-size: 24px;
         font-weight: bold;
         color: $heading-color;
+
+        @media (min-width: $medium-screen-width-start) {
+            margin-left: 10px;
+        }
     }
 
     .preview-section {
-        min-width: 320px;
+        min-width: 300px;
         background-color: #E1E4E7;
     }
 
-    @media (min-width: 800px) {
+    @media (min-width: $medium-screen-width-end) {
         display: flex;
 
         .column {
             flex: 1;
+
+            &.edit-section {
+                padding: 20px;
+            }
 
             .hcard-preview {
                 padding-top: 70px;
