--- a/app/styles/hcard-preview.scss
+++ b/app/styles/hcard-preview.scss
@@ -3,7 +3,7 @@
 .hcard-preview {
     min-width: 270px;
     max-width: 350px;
-    padding: 30px 10px;
+    padding: 40px 10px 30px;
     margin: auto;
 
     .preview-header {
@@ -28,6 +28,8 @@
             .avatar-image {
                 width: 75px;
                 height: 85px;
+                border: 1px solid lightgray;
+
             }
         }
     }
