Validation message font style change

--- a/app/styles/input-field.scss
+++ b/app/styles/input-field.scss
@@ -27,6 +27,7 @@
     }
 
     .validation-error {
+        font-family: $merriweather-sans;
         position: absolute;
         right: 0;
         bottom: -5px;
